--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,16 +1,18 @@
 [uwsgi]
 http-var = postgresql.host=team.obl.kz
-http-var = postgresql.port=5433
+http-var = postgresql.port=6433
 
 chdir = %d
-check-static = ./static
+static-map = /=static
 module = wsgi:application
 catch-exceptions = true
 touch-reload = wsgi.py
 touch-reload = uwsgi.ini
-http = 0:8002
+touch-reload = index.html
+http = 0:7890
 http-auto-chunked = true
 http-keepalive = true
 threads = 10
 venv = ./env
 env = VIRTUAL_ENV=./env
+
