--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,5 +1,5 @@
 [uwsgi]
-http-var = postgresql.host=team.obl.kz
+http-var = postgresql.host=localhost
 http-var = postgresql.port=6433
 
 chdir = %d
