--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -11,6 +11,7 @@ touch-reload = uwsgi.ini
 touch-reload = index.html
 http = 0:7890
 http-auto-chunked = true
+http-auto-gzip = true
 http-keepalive = true
 threads = 10
 venv = ./env
