--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -9,7 +9,7 @@ catch-exceptions = true
 touch-reload = wsgi.py
 touch-reload = uwsgi.ini
 touch-reload = index.html
-http = 0:7890
+https = 0:7890,%(cert).crt,%(cert).key
 http-auto-chunked = true
 http-auto-gzip = true
 http-keepalive = true
