--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -9,7 +9,7 @@ catch-exceptions = true
 touch-reload = wsgi.py
 touch-reload = uwsgi.ini
 touch-reload = index.html
-https = 0:7890,%(cert).crt,%(cert).key
+https = 0:7890,%d/env/server.crt,%d/env/server.key
 http-auto-chunked = true
 http-auto-gzip = true
 http-keepalive = true
