--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,19 +1,23 @@
 [uwsgi]
+
+; pgbouncer
 http-var = postgresql.host=localhost
 http-var = postgresql.port=6433
 
 chdir = %d
+module = wsgiapp:application
 static-map = /=static
-module = wsgi:application
+static-map = /=static/index.html
 catch-exceptions = true
-touch-reload = wsgi.py
+touch-reload = wsgiapp.py
 touch-reload = uwsgi.ini
-touch-reload = index.html
+
+; use ssl because of basic auth
 https = 0:7890,%d/env/server.crt,%d/env/server.key
+
 http-auto-chunked = true
 http-auto-gzip = true
 http-keepalive = true
 threads = 10
 venv = ./env
 env = VIRTUAL_ENV=./env
-
