makefile, open table from tree

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -6,8 +6,8 @@ http-var = postgresql.port=6433
 
 chdir = %d
 module = wsgiapp:application
-static-map = /=static
-static-map = /=static/index.html
+static-map = /=static/dist
+static-map = /=static/dist/index.html
 catch-exceptions = true
 touch-reload = wsgiapp.py
 touch-reload = uwsgi.ini
