--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -10,7 +10,9 @@ static-map = /=static/dist
 static-map = /=static/dist/index.html
 catch-exceptions = true
 touch-reload = wsgiapp.py
-touch-reload = uwsgi.ini
+
+; reload when config file changed
+touch-reload = %p
 
 ; use ssl because of basic auth
 https = 0:7890,%d/env/server.crt,%d/env/server.key
