--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -5,11 +5,12 @@ http-var = postgresql.host=localhost
 http-var = postgresql.port=6433
 
 chdir = %d
-module = wsgiapp:application
-static-map = /=static/dist
-static-map = /=static/dist/index.html
+static-map = /assets=src/assets
+static-map = /=src/index.html
+static-map = /favicon.ico=src/favicon.ico
 catch-exceptions = true
-touch-reload = wsgiapp.py
+module = src.wsgiapp:application
+touch-reload = src/wsgiapp.py
 
 ; reload when config file changed
 touch-reload = %p
