switch to code mirror

--- a/pgblackboard/assets/fontello/config.json
+++ b/pgblackboard/assets/fontello/config.json
@@ -13,6 +13,12 @@
       "src": "fontawesome"
     },
     {
+      "uid": "bf45c39702763f1803b550c36a0ceb12",
+      "css": "cancel-squared",
+      "code": 59394,
+      "src": "entypo"
+    },
+    {
       "uid": "1189604bf305b6b03a74685ce60e6632",
       "css": "column",
       "code": 59405,
