simplier server start

--- a/upstart/pgblackboard.conf
+++ b/upstart/pgblackboard.conf
@@ -3,4 +3,4 @@ stop on runlevel [!2345]
 setuid pgblackboard
 setgid pgblackboard
 respawn
-exec /usr/bin/env python3 -m pgblackboard.server --conf /etc/pgblackboard.conf
+exec /usr/bin/env python3 -m pgblackboard
