issue #25 theme toggler

--- a/pgblackboard/static/fontello/config.json
+++ b/pgblackboard/static/fontello/config.json
@@ -13,6 +13,12 @@
       "src": "fontawesome"
     },
     {
+      "uid": "5278ef7773e948d56c4d442c8c8c98cf",
+      "css": "lightbulb-2",
+      "code": 59408,
+      "src": "fontawesome"
+    },
+    {
       "uid": "3212f42c65d41ed91cb435d0490e29ed",
       "css": "trigger",
       "code": 59397,
