subicon for fk column

--- a/pgblackboard/static/fontello/config.json
+++ b/pgblackboard/static/fontello/config.json
@@ -89,6 +89,12 @@
       "css": "uniqkey",
       "code": 59402,
       "src": "iconic"
+    },
+    {
+      "uid": "1fb8776fe6f1d3bbf970996fdfcf0f94",
+      "css": "link",
+      "code": 59395,
+      "src": "mfglabs"
     }
   ]
 }
