--- a/src/static/package.json
+++ b/src/static/package.json
@@ -1,13 +1,14 @@
 {
   "description": "pgBlackboard ui",
   "devDependencies": {
-    "jake": "~8.0.12",
-    "csso": "~1.3.11",
-    "less": "~2.4.0",
     "autoprefixer-core": "~5.1.7",
-    "uglify-js": "~2.4.17",
+    "csso": "~1.3.11",
+    "jake": "~8.0.12",
     "jasmine": "~2.2.1",
-    "jscs": "~1.11.3"
+    "jscs": "~1.11.3",
+    "less": "~2.4.0",
+    "systemjs": "^0.15.0",
+    "uglify-js": "~2.4.17"
   },
   "dependencies": {
     "codemirror": "~5.0.0",
