--- a/src/static/package.json
+++ b/src/static/package.json
@@ -3,13 +3,14 @@
   "description": "pgBlackboard ui",
   "devDependencies": {
     "autoprefixer-core": "~5.1.7",
+    "closurecompiler": "^1.5.1",
     "csso": "~1.3.11",
     "jake": "~8.0.12",
     "jasmine": "~2.2.1",
     "jscs": "~1.11.3",
     "less": "~2.4.0",
-    "uglify-js": "~2.4.17",
-    "require-list": "~0.1.6"
+    "require-list": "~0.1.6",
+    "uglify-js": "~2.4.17"
   },
   "dependencies": {
     "codemirror": "~5.0.0",
