--- a/src/http/Cargo.toml
+++ b/src/http/Cargo.toml
@@ -8,5 +8,5 @@ path = "mod.rs"
 name = "http"
 
 [dependencies]
-rustc-serialize = "*"
-threadpool = "*"
+rustc-serialize = "0.3"
+threadpool = "0.1.3"
