--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ path = "./src/postgres"
 
 [dependencies]
 #regex_macros = "*"
-#regex = "*"
+regex = "0.1.8"
+regex_macros = "0.1.8"
 rustc-serialize = "0.3"
 threadpool = "0.1.3"
 #byteorder = "*"
