--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,8 @@
-[project]
+[package]
 name = "pgblackboard"
 version = "0.2.0"
 authors = ["exe-dealer <exe-dealer@yandex.ru>"]
 build = "build.rs"
-
-[lib]
-name = "pgblackboard"
-
-[[bin]]
-name = "pgblackboard"
 
 [dependencies.postgres]
 path = "./src/postgres"
@@ -19,5 +13,3 @@ regex_macros = "0.1.8"
 rustc-serialize = "0.3"
 threadpool = "0.1.3"
 flate2 = "0.2.6"
-#byteorder = "*"
-#rust-crypto = "*"
