--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ build = "build.rs"
 path = "./src/postgres"
 
 [dependencies]
+argparse = "0.1"
 regex = "0.1.8"
 regex_macros = "0.1.8"
 rustc-serialize = "0.3"
