--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "knockout": "~3.3.0",
     "leaflet": "~0.7.3",
     "codemirror": "~5.0.0",
-
     "jake": "~8.0.12",
     "closurecompiler": "^1.5.1",
     "autoprefixer-core": "~5.1.7",
     "csso": "~1.3.11",
     "jasmine": "~2.2.1",
-    "uglify-js": "~2.4.17"
+    "uglify-js": "~2.4.17",
+    "dagre-d3": "~0.4.3",
+    "d3": "~3.5.5"
   },
   "version": "0.2.0",
   "scripts": {
@@ -24,7 +25,6 @@
     "build": "jake && cargo build",
     "jshint": "jshint src --exclude src/bundle-index.js",
     "jscs": "jscs src --exclude src/bundle-index.js --verbose",
-
     "build-ui": "npm install --production && jake",
     "start": "cd src/ui && python3 -m http.server"
   },
