--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,12 @@ build = "build.rs"
 [dependencies.postgres]
 path = "./src/postgres"
 
+[dependencies.http]
+path = "./src/http"
+
 [dependencies]
 argparse = "0.1"
-regex = "0.1.8"
-regex_macros = "0.1.8"
+regex = "0.1"
+regex_macros = "0.1"
 rustc-serialize = "0.3"
-threadpool = "0.1.3"
 flate2 = "0.2.6"
