--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "description": "pgBlackboard ui",
   "devDependencies": {
     "jscs": "~1.11.3",
-    "jshint": "^2.7.0"
+    "jshint": "^2.7.0",
+    "serve-static": "~1.9.3",
+    "connect": "~3.3.5",
+    "jasmine": "~2.2.1",
+    "connect-redirection": "0.0.1",
+    "body-parser": "~1.12.4"
   },
   "dependencies": {
     "knockout": "~3.3.0",
@@ -13,10 +18,7 @@
     "closurecompiler": "^1.5.1",
     "autoprefixer-core": "~5.1.7",
     "csso": "~1.3.11",
-    "jasmine": "~2.2.1",
-    "uglify-js": "~2.4.17",
-    "dagre-d3": "~0.4.3",
-    "d3": "~3.5.5"
+    "uglify-js": "~2.4.17"
   },
   "version": "0.2.0",
   "scripts": {
@@ -25,8 +27,7 @@
     "build": "jake && cargo build",
     "jshint": "jshint src --exclude src/bundle-index.js",
     "jscs": "jscs src --exclude src/bundle-index.js --verbose",
-    "build-ui": "npm install --production && jake",
-    "start": "cd src/ui && python3 -m http.server"
+    "build-ui": "npm install --production && jake"
   },
   "author": "",
   "license": "BSD-2-Clause",
