--- a/ui/package.json
+++ b/ui/package.json
@@ -4,6 +4,7 @@
   "author": "exe-dealer <exe-dealer@yandex.ru>",
   "license": "BSD-2-Clause",
   "private": true,
+  "version": "0.0.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/exe-dealer/pgblackboard"
@@ -24,10 +25,8 @@
     "closurecompiler": "^1.5.1",
     "autoprefixer-core": "~5.1.7",
     "csso": "~1.3.11",
-    "jasmine": "~2.2.1",
-    "uglify-js": "~2.4.17"
+    "jasmine": "~2.2.1"
   },
-  "version": "0.0.0",
   "engines": {
     "node": ">=0.10.0"
   },
