--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: rust
 rust: nightly
-script: "cargo test --package postgres && cargo test --package http && cargo test && (cd src/ui && npm test)"
+script: "cargo test && (cd src/ui && npm test)"
 jdk:
     - openjdk7
 before_script:
