--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.2.0"
 authors = ["exe-dealer <exe-dealer@yandex.ru>"]
 
 [dependencies]
-http            = { path = "./src/http" }
 ui              = { path = "./src/ui" }
 
-argparse        = "0.2"
-# flate2          = "0.2.6"
+argparse = "0.2"
 rustc-serialize = "0.3"
+threadpool = "0.1.3"
+# flate2 = "0.2.6"
