--- a/src/ui/tree/fontello/config.json
+++ b/src/ui/tree/fontello/config.json
@@ -7,6 +7,12 @@
   "ascent": 850,
   "glyphs": [
     {
+      "uid": "0f4cae16f34ae243a6144c18a003f2d8",
+      "css": "error",
+      "code": 59394,
+      "src": "fontawesome"
+    },
+    {
       "uid": "b035c28eba2b35c6ffe92aee8b0df507",
       "css": "check",
       "code": 59399,
@@ -29,6 +35,12 @@
       "css": "index",
       "code": 59407,
       "src": "fontawesome"
+    },
+    {
+      "uid": "7e4164950ffa4990961958b2d6318658",
+      "css": "info",
+      "code": 59396,
+      "src": "entypo"
     },
     {
       "uid": "1189604bf305b6b03a74685ce60e6632",
