--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "jscs": "~2.5.1"
   },
   "dependencies": {
+    "autoprefixer": "~6.1.0",
+    "codemirror": "~5.8.0",
+    "dom5": "^1.3.1",
+    "html-minifier": "~1.0.0",
+    "html-postcss": "~0.1.1",
     "knockout": "~3.3.0",
     "leaflet": "~0.7.3",
-    "codemirror": "~5.8.0",
-    "html-postcss": "~0.1.1",
     "postcss-url": "~5.0.2",
-    "autoprefixer": "~6.1.0",
-    "html-minifier": "~1.0.0",
     "vulcanize": "~1.14.0"
   },
   "engines": {
