--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ authors = ["exe-dealer <exe-dealer@yandex.ru>"]
 argparse = "0.2"
 rustc-serialize = "0.3"
 threadpool = "0.1.3"
+serde = "0.9"
+serde_json = "0.9"
+serde_derive = "0.9"
 # flate2 = "0.2.6"
 
 [[bin]]
