--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "pgblackboard"
 version = "0.2.0"
 authors = ["exe-dealer <exe-dealer@yandex.ru>"]
-#build = "ui/build.rs" 
+build = "ui/build.rs" 
 
 [dependencies]
 argparse = "0.2"
@@ -16,3 +16,6 @@ serde_derive = "0.9"
 [[bin]]
 name = "pgblackboard"
 path = "server/main.rs"
+
+[features]
+uibuild = []
