--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "exe-dealer <exe-dealer@yandex.ru>",
   "private": true,
   "version": "0.0.0",
-  "devDependencies": {
+  "dependencies": {
     "esprima": "^3.1.3",
     "fs-promise": "^2.0.2",
     "postcss": "^5.2.16",
@@ -15,7 +15,7 @@
     "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-commonjs": "^8.0.2"
   },
-  "dependencies": {},
+  "devDependencies": {},
   "engines": {
     "node": ">=0.10.0"
   },
