--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 sudo: required
 services:
   - docker
-language: c
+language: rust
+node_js: 8.6
 script:
-  - echo 'ok'
+  - npm install
+  - npm run build
+  - cargo build --release --features uibuild
+  - docker build --tag exedealer/pgblackboard
 after_success:
-  - make && docker build --tag exedealer/pgblackboard . && docker login -u='$DOCKERHUB_USERID' -p='$DOCKERHUB_PASSWORD' && docker push exedealer/pgblackbord
+  - docker login -u='$DOCKERHUB_USERID' -p='$DOCKERHUB_PASSWORD' && docker push exedealer/pgblackbord
 
