--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@ services:
   - docker
 language: rust
 node_js: 8.6
-script:
+install:
   - npm install
+  - mkdir -p ui/_dist
+  - cargo fetch
+script:
   - npm run build
   - cargo build --release --features uibuild
   - docker build --tag exedealer/pgblackboard
