--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
 script:
   - npm run build
   - cargo build --release --features uibuild
+  - ls -laR target
   - docker build --tag exedealer/pgblackboard .
 after_success:
   - docker login -u='$DOCKERHUB_USERID' -p='$DOCKERHUB_PASSWORD' && docker push exedealer/pgblackbord
