--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,5 @@ script:
   - cargo build --release --features uibuild
   - docker build --tag exedealer/pgblackboard .
 after_success:
-  - echo '$DOCKERHUB_USERID' '$DOCKERHUB_PASSWORD'
-  - docker login -u='$DOCKERHUB_USERID' -p='$DOCKERHUB_PASSWORD' && docker push exedealer/pgblackbord
+  - docker login -u $DOCKERHUB_USERID -p $DOCKERHUB_PASSWORD && docker push exedealer/pgblackbord
 
