--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,14 @@ services:
 language: rust
 node_js: 8.6
 install:
-  - npm install
   - mkdir -p ui/_dist
+  - npm install
   - cargo fetch
 script:
   - npm run build
   - cargo build --release --features uibuild
   - docker build --tag exedealer/pgblackboard .
 after_success:
-  - echo $DOCKERHUB_USERID $DOCKERHUB_PASSWORD
-  - docker login -u $DOCKERHUB_USERID -p $DOCKERHUB_PASSWORD && docker push exedealer/pgblackbord
+  - docker login -u $DOCKERHUB_USERID -p $DOCKERHUB_PASSWORD
+  - docker push exedealer/pgblackboard
 
