--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,13 @@ services:
       context: .
       args:
         CARGO_ARGS: ''
-    command: --postgres postgres:5432
-    working_dir: /pgblackboard
+    environment:
+      PGBB_POSTGRES: 192.168.55.152:5432
     ports:
       - 7890:7890
     volumes:
-      - $PWD/ui:/pgblackboard/ui
+      - ./ui:/opt/pgblackboard/ui:ro
   postgres:
     image: mdillon/postgis:10-alpine
     volumes:
-      - $PWD/demo.sql:/docker-entrypoint-initdb.d/demo.sql
+      - ./demo.sql:/docker-entrypoint-initdb.d/demo.sql
