--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,13 @@ services:
       args:
         CARGO_ARGS: ''
     environment:
-      PGBB_POSTGRES: 192.168.55.119:20304
+      PGBB_POSTGRES: postgres:5432
     ports:
       - 7890:7890
     volumes:
       - ./ui:/opt/pgblackboard/ui:ro
-  # postgres:
-  #   image: mdillon/postgis:10-alpine
-  #   volumes:
-  #     - ./demo.sql:/docker-entrypoint-initdb.d/demo.sql
+
+  postgres:
+    image: mdillon/postgis:11-alpine
+    volumes:
+      - ./demo.sql:/docker-entrypoint-initdb.d/demo.sql
