--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -12,5 +12,5 @@ jobs:
         uses: elgohr/Publish-Docker-Github-Action@master
         with:
           name: docker.pkg.github.com/kagis/pgblackboard:latest
-          username: $${{ env.GITHUB_ACTOR }}
+          username: $${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
