--- a/compose.yml
+++ b/compose.yml
@@ -6,6 +6,7 @@ services:
     ports: [7890:7890]
     # command: [pgbb, postgres://192.168.55.130:29401]
     command: [pgbb, postgres://192.168.55.152:5432]
+    # command: [pgbb, postgres://192.168.55.130:25101]
     # stop_signal: SIGKILL
     develop:
       watch:
