--- a/compose.yml
+++ b/compose.yml
@@ -1,8 +1,9 @@
 name: pgblackboard
 services:
   pgbb:
-    image: kagiskz/pgblackboard:3-20240630
-    build: .
+    build:
+      context: .
+      target: dev
     ports: [7890:7890]
     # command: [pgbb, postgres://192.168.55.130:29401]
     command: [pgbb, postgres://192.168.55.152:5432]
@@ -13,3 +14,10 @@ services:
         - action: sync+restart
           path: .
           target: /app
+
+  pgbb_prod:
+    image: kagiskz/pgblackboard:3-20241005
+    build: .
+    ports: [7890:7890]
+    command: [pgbb, postgres://192.168.55.152:5432]
+    profiles: [prod]
